--- a/src/components/PuzzleDemo/PuzzleCard/styles.module.scss
+++ b/src/components/PuzzleDemo/PuzzleCard/styles.module.scss
@@ -37,7 +37,7 @@
 .title {
   margin-bottom: 20px;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 16px;
   display: -webkit-box;
   -webkit-line-clamp: 2; // количество строк
@@ -47,9 +47,10 @@
 
 .text {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 10px;
+  line-height: 12px;
   margin-bottom: auto;
+
   display: -webkit-box;
   -webkit-line-clamp: 7; // количество строк
   -webkit-box-orient: vertical;
@@ -58,7 +59,7 @@
 
 .date {
   font-weight: 400;
-  font-size: 12px;
+  font-size: 8px;
   color: $color-salad;
 }
 
@@ -69,12 +70,11 @@
 
   .image {
     width: 100%; 
-    height: 206px;
+    height: 206px; 
   }
 
   .textContent {
     padding: 24px 30px;
-    text-align: justify;
   }
 }
 
@@ -95,7 +95,7 @@
   }
 
   .title {
-    word-break:break-all; 
+    // word-break:break-all; 
   }
 }
 
@@ -122,24 +122,28 @@
   .image {
     height: 137px;
   }
-  
-  .title {
-    margin-bottom: 14px;
-  }
 
   .text {
-    -webkit-line-clamp: 2; // количество строк
+    -webkit-line-clamp: 4; // количество строк
   }
 
   .bigCard {
+    .title {
+      margin-bottom: 10px;
+    }
+
     .textContent {
       padding: 16px 24px;
     }
   }
 
   .smallCard {
+    .title {
+      margin-bottom: 10px;
+    }
+
     .textContent {
-      padding: 14px; 
+      padding: 10px; 
     }
   }
 }
